...
                             clickedCompletion:(MTAlertWrapperClickedCompletionBlock)clickedCompletionBlock
                          didDismissCompletion:(MTAlertWrapperDidDismissCompletionBlock)didDismissCompletionBlock
{
    [self showAlertInViewController:viewController
                          withTitle:title
                            message:message
                  cancelButtonTitle:NSLocalizedString(@"Continue", nil)
             otherButtonTitlesArray:@[NSLocalizedString(@"Repeat", nil)]
                           textType:MTAlertWrapperTextTypePlain
                  clickedCompletion:clickedCompletionBlock
               didDismissCompletion:didDismissCompletionBlock];
}

- (void)showErrorAlertInViewController:(UIViewController *)viewController
                           withMessage:(NSString *)message
{
    [self showAlertInViewController:viewController
                          withTitle:NSLocalizedString(@"Error", nil)
                            message:message
                  cancelButtonTitle:NSLocalizedString(@"Continue", nil)
             otherButtonTitlesArray:nil
                           textType:MTAlertWrapperTextTypePlain
                  clickedCompletion:nil
               didDismissCompletion:nil];
...
            [alert addAction:defaultAction];
            
        }
        
        if (textType == MTAlertWrapperTextTypeInput) {
            [alert addTextFieldWithConfigurationHandler:^(UITextField *textField) {
                [textField setAccessibilityLabel:@"Input Text Field"];
            }];
        }
        
        dispatch_async(dispatch_get_main_queue(), ^{
            [viewController presentViewController:alert
                                         animated:YES
...
