...
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vnt-AQ-6EK">
                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="IDP-OL-wB4"/>
                                </constraints>
                                <items>
                                    <barButtonItem title="ButtonDidClick" id="kSV-sl-AiX">
                                        <connections>
                                            <action selector="buttonDidClickButtonPressed:" destination="BYZ-38-t0r" id="4W7-8s-na6"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LLQ-OH-SmQ"/>
                                    <barButtonItem title="ActionSheetDidDismiss" id="qBW-Mw-ugA">
                                        <connections>
                                            <action selector="actionSheetDidDismissButtonPressed:" destination="BYZ-38-t0r" id="5Zp-64-1Sm"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
...
